k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webserver-ingress
  namespace: webserver
spec:
  ingressClassName: nginx
  rules:
    - host: webserver.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8090
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userinput-server
                port:
                  number: 8080
